- added unit tests to formats - fixed color in list view for light themes - fixed position for selected in overview ruler - fixed menu z-index - fixed placeholder for workspace

--- a/src/views/components/l13-diff-list/l13-diff-list.scss
+++ b/src/views/components/l13-diff-list/l13-diff-list.scss
@@ -72,12 +72,12 @@ l13-diff-list-row {
 				background: var(--vscode-list-inactiveSelectionForeground, var(--l13-icon-background));
 			}
 					
-			span {
+			// span {
 				
-				&.-exists {
-					color: var(--vscode-list-inactiveSelectionForeground, var(--vscode-foreground));
-				}
-			}
+				// &.-exists {
+					// color: var(--vscode-list-inactiveSelectionForeground, var(--vscode-foreground));
+				// }
+			// }
 		}
 		
 		&:hover {
